# django-pub

./: .djlintrc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-up.sh  docker-compose.prod.yml  docker-compose.yml  getdeps.sh  prod-up.sh  pyproject.toml  requirements.txt
nginx/: nginx.conf
pub/: Dockerfile  Dockerfile.prod  requirements.txt  test_ollama.sh
pub/apps/articles/: admin.py  models.py
pub/apps/articles/migrations/: 0001_initial.py  0002_article_comments.py
pub/apps/articles/templates/articles/: article_listing.html  summary.html  time_ago_published.html
pub/apps/articles/tests/: test_article_model.py
pub/apps/articles/utils/: publishing.py  test_publishing_util.py
pub/apps/catalog/: admin.py  models.py
pub/apps/catalog/migrations/: 0001_initial.py
pub/apps/comments/: admin.py  models.py
pub/apps/comments/migrations/: 0001_initial.py
pub/apps/core/: admin.py  urls.py  views.py
pub/apps/core/templates/core/: article.html  article_list.html  base.html  index.html
pub/apps/core/templates/core/includes/: _footer.html  (+11 more)
pub/apps/core/templatetags/: markdown_extras.py
pub/apps/core/tests/: test_article_list_view.py  test_article_view.py  test_index_view.py  test_markdown_extras.py
pub/apps/core/views/: __init__.py  article.py  article_list.py
pub/apps/images/: admin.py  models.py
pub/apps/images/migrations/: 0001_initial.py
pub/apps/images/utils/: upload.py
pub/apps/llm/: apps.py  client.py  config.py  oldtests.py  tests.py  urls.py  views.py
pub/apps/llm/tests/: test_client.py  test_context_utils.py  test_request_utils.py
pub/apps/llm/utils/: context.py  request.py
pub/config/: asgi.py  settings.py  urls.py  wsgi.py
pub/static/css/: admin_image_modal.css  markdownx_unfold.css  styles.css
pub/static/js/: admin_image_modal.js  copy_image_url.js
pub/static/js/alpinejs/: alpine.min.3.15.0.js
pub/static/js/pub/: admin_image_modal.js  animation-delays.js  copy_image_url.js  infinite-scroll.js
tailwind/: custom.css  package-lock.json  package.json  tailwind.config.js
(+10 files in other folders)
